mod_http_oauth2: Fix contrast of links on consent page
The default dark blue wasn't very visible on a dark background

--- a/mod_http_oauth2/html/style.css
+++ b/mod_http_oauth2/html/style.css
@@ -68,6 +68,16 @@ button, input[type=submit]
 		background-color: #842029;
 	}
 
+
+	:link
+	{
+		color: #6197df;
+	}
+
+	:visited
+	{
+		color: #9a61df;
+	}
 }
 
 @media(min-width: 768px)
